--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -1,25 +1,40 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:card_view="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    card_view:cardUseCompatPadding="true"
+    android:foreground="?selectableItemBackground">
 
-    <TextView
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Name"
-        android:id="@+id/listInput"/>
+        android:layout_margin="16dp"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="URL"
-        android:id="@+id/listResult"/>
+        <TextView
+            android:padding="8dp"
+            android:id="@+id/listInput"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Name" />
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="URL"
-        android:id="@+id/listLanguage"/>
+        <TextView
+            android:layout_below="@id/listInput"
+            android:padding="8dp"
+            android:id="@+id/listResult"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="URL" />
 
+        <TextView
+            android:layout_below="@id/listResult"
+            android:padding="8dp"
+            android:id="@+id/listLanguage"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="URL" />
 
-</LinearLayout>
+    </RelativeLayout>
+
+</androidx.cardview.widget.CardView>
